--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="contacts">
                 <h2>Contacts</h2>
                 <p>Telegram: <a href="tg://resolve?domain=sitting33">@sitting33</a></p>
-                <p>E-mail: <a href="mailto:me@33rd.dev">me@33rd.dev</a></p>
+                <p>E-mail: <a href="mailto:me@sit.sh">me@sit.sh</a></p>
                 <p>Discord: @sit#1005</p>
             </section>
             <section class="what-i-do">
