--- a/index.html
+++ b/index.html
@@ -40,17 +40,8 @@
                             <a href="https://sit.sh" target="_blank" rel="noreferrer noopener">sit.sh</a>,
                             other projects
                         </li>
-                        <li>
-                            Docker:
-                            <a href="https://github.com/timas130/campfire-web" target="_blank" rel="noreferrer noopener">Campfire Web (Dockerfile)</a>,
-                            (
-                                <a href="https://data.sit.sh" target="_blank" rel="noreferrer noopener">data</a> |
-                                <a href="https://secure.sit.sh" target="_blank" rel="noreferrer noopener">secure</a> |
-                                <a href="https://git.sit.sh" target="_blank" rel="noreferrer noopener">git</a> |
-                                <a href="https://docker.sit.sh" target="_blank" rel="noreferrer noopener">docker</a>
-                            ).sit.sh
-                        </li>
                         <li>JS/TS (Node)</li>
+                        <li>Docker</li>
                         <li>
                             Kotlin:
                             <a href="https://github.com/ZeonXX/Campfire" target="_blank" rel="noreferrer noopener">Campfire</a> (contrib),
@@ -58,8 +49,7 @@
                         </li>
                         <li>
                             Rust:
-                            <a href="https://r.33rd.dev" target="_blank" rel="noreferrer noopener">Routeallow</a>
-                            <a href="https://r.sit.sh/_/activate?id=MpgYWtiCb_xdIhRwOS4Yk" target="_blank" rel="noreferrer noopener">(example link)</a>,
+                            <a href="https://r.sit.sh" target="_blank" rel="noreferrer noopener">Routeallow</a>,
                             personal projects
                         </li>
                         <li>PHP</li>
