change git.sit.sh to git.sr.ht

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li>
                             Kotlin:
                             <a href="https://github.com/ZeonXX/Campfire" target="_blank" rel="noreferrer noopener">Campfire</a> (contrib),
-                            little personal apps on <a href="https://git.sit.sh" target="_blank" rel="noreferrer noopener">git.sit.sh</a>
+                            little personal apps on <a href="https://git.sr.ht/~sit/" target="_blank" rel="noreferrer noopener">sr.ht</a>
                         </li>
                     </ul>
                 </div>
