add email "protection"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <section class="contacts">
                 <h2>Contacts</h2>
                 <p>Telegram: <a href="tg://resolve?domain=sitting33">@sitting33</a></p>
-                <p>E-mail: <a href="mailto:me@sit.sh">me@sit.sh</a></p>
+                <noscript><p>Please enable JavaScript to see the email address. No non-free JavaScript will be run.</p></noscript>
+                <p>E-mail: <a id="email" href="mailto:hello.spambots@sit.sh">please wait...</a></p>
                 <p>Discord: @sit#1005</p>
             </section>
             <section class="what-i-do">
